Update with april 1 data

--- a/trends/templates/index.html
+++ b/trends/templates/index.html
@@ -46,8 +46,8 @@
 			Highcharts.chart('container', {
 			  	chart: {type: 'area'},
 			  	rangeSelector: { selected: 4},
-			  	title: {text: 'Number of Confirmed Cases', style: {fontSize:"24px"}},
-			  	subtitle: {text: 'Country-level data from Johns Hopkins, US state-level data from the New York Times'},
+			  	title: {text: 'Cummulative Confirmed Cases', style: {fontSize:"24px"}},
+			  	subtitle: {text: 'Global data from Johns Hopkins, US state-level data from the New York Times'},
 			  	xAxis: {categories: _dates},
 			  	yAxis: {
 			  		title: {text: '# Confirmed Cases'}
