--- a/templates/base_generic.html
+++ b/templates/base_generic.html
@@ -13,19 +13,47 @@
 	<link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
 	
     {% block header %}
-		<title> COVID-19 Trends </title>
+		<title> C19 Trends </title>
 	{% endblock %}
 </head>
 
 <body>
+	<nav class="navbar navbar-expand-lg navbar-dark bg-dark fixed_top" role="navigation">
+		<div class="container-fluid">
+			<div class="navbar-header">
+				<a class="navbar-brand" href="#">C19 Trends</a>
+			</div>
 
-	<nav class="navbar navbar-expand-md navbar-dark bg-dark fixed_top">
-		<a class="navbar-brand" href="#">C19 Trends</a>
-		<button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarsExampleDefault" aria-controls="navbarsExampleDefault" aria-expanded="false" aria-label="Toggle navigation">
-			<span class="navbar-toggler_icon"> </span>
-		</button>
+			<button class="navbar-toggler border-0" type="button" data-toggle="collapse" data-target="#exCollapsingNavbar">
+            &#9776;
+        	</button>
+
+        	<div class="collapse navbar-collapse" id="exCollapsingNavbar">
+				<ul class="nav navbar-nav">
+					<li class="nav-item"><a href="{% url 'trends-index' %}" class="nav-link">Trends</a></li>
+                	<li class="nav-item"><a href="{% url 'dashboard-index' %}" class="nav-link">Dashboard</a></li>
+				</ul>
+			</div>
+
+
+			{% if user.is_authenticated %}
+			    {% if user.first_name %}
+					<button class="btn btn-dark navbar-btn" style="margin: 2px"> Welcome, {{ user.first_name }}!</button>
+				{% else %}
+					<button class="btn btn-dark navbar-btn" style="margin: 2px"> Welcome, {{ user.get_username }}!</button>
+				{% endif %}
+				<a class="btn btn-secondary navbar-btn" href="{% url 'logout' %}">Log Out</a>
+			{% else %}
+				<a class="btn btn-dark navbar-btn" style="margin: 2px" href="{% url 'login'%}">Log In</a>
+				<a class="btn btn-secondary navbar-btn" style="margin: 2px" href="{% url 'signup' %}">Sign Up</a>
+			{% endif %}
+
+		</div>
 	</nav>
+
+
 	{% block content %}
+
 	{% endblock %}
 
 	<!-- Optional JavaScript -->
