--- a/dashboard/templates/dashboard-index.html
+++ b/dashboard/templates/dashboard-index.html
@@ -1,9 +1,70 @@
 {% extends 'base_generic.html' %}
 
 {% block header %}
-	<title> Dashboard </title>
+	<title> C19 Dashboard </title>
 {% endblock %}
 
 {% block content %}
-		<strong> test content: {{ test_variable }} </strong>
+	<div class="container-fluid", style="padding: 5%">
+		{% if user.is_authenticated %}
+			<strong> Logged in version of the dashboard </strong>
+			<button type="button" class="btn btn-primary" data-toggle="modal" data-target=".bd-example-modal-lg">Update country selection</button>
+
+			<div class="modal fade bd-example-modal-lg" tabindex="-1" role="dialog" aria-labelledby="myLargeModalLabel" aria-hidden="true">
+			  <div class="modal-dialog modal-lg">
+			    <div class="modal-content">
+			    	<div class="modal-header">
+			  			<h5 class="modal-title" id="exampleModalLabel">Modal title</h5>
+			  			<button type="button" class="close" data-dismiss="modal" aria-label="Close">
+			  				<span aria-hidden="true">&times;</span>
+			  			</button>
+			  		</div>
+		  			<div class="modal-body">
+		  				test content here
+		  			<style>
+		  					ul{
+		  						list-style-type:none;
+		  						display: flex;
+		  						flex-direction: column;
+		  						flex-wrap: wrap;
+		  					}
+		  					.modal-dialog{
+							    overflow-y: initial !important
+							}
+							.modal-body{
+							    height: 85%;
+							    overflow-y: auto;
+							    overflow-x: auto;
+							    flex-wrap: true;
+}
+		  				</style>
+
+		  				
+		  				<form id="country-modal", action = "", method = "GET", style="height:500px"> country filter: {{ dashboard_country_filter_form.countries}}
+		  				</form>
+
+<!-- 		  				<form action="", method="GET">
+		  					<ul>
+				  				{% for value, text in dashboard_country_filter_form.countries.field.choices %}
+				  					<li> {{ value }} : {{ text }} </li>
+			  					{% endfor %}
+			  				</ul>
+	  					</form> -->
+
+
+		  			</div>
+		  			<div class="modal-footer">
+		  				<button type="button" class="btn btn-secondary" data-dismiss="modal">Close</button>
+		  				<button type="button" class="btn btn-primary">Save changes</button>
+		  			</div>
+		  		</div>
+			      test content 1234
+			  </div>
+			</div>
+		{% else %}
+			<strong> Please <a href="{% url 'login' %}"> log in </a> or <a href="{% url 'signup' %}"> sign up </a>to create your personalized dashboard for COVID-19 data </strong>
+		{% endif %}
+	</div>
+
+
 {% endblock %}
