--- a/trends/templates/trends-index.html
+++ b/trends/templates/trends-index.html
@@ -49,9 +49,7 @@
 			  		title: {text: '# Confirmed Cases'}
 			  	},
 			  	plotOptions: {
-			  		area: {
-			  			stacking: 'normal'
-			  		}, 
+			  		area: {stacking: 'normal'},
 			  		series: {marker: {radius: 8}}
 			  	},
 			  	series: [{ 
