--- a/templates/base_generic.html
+++ b/templates/base_generic.html
@@ -28,10 +28,16 @@
             &#9776;
         	</button>
 
+
         	<div class="collapse navbar-collapse" id="exCollapsingNavbar">
 				<ul class="nav navbar-nav">
-					<li class="nav-item"><a href="{% url 'trends-index' %}" class="nav-link">Trends</a></li>
-                	<li class="nav-item"><a href="{% url 'dashboard-index' %}" class="nav-link">Dashboard</a></li>
+					{% if tab == "dashboard" %}
+						<li class="nav-item"><a href="{% url 'trends-index' %}" class="nav-link">Trends</a></li>
+                		<li class="nav-item"><a href="{% url 'dashboard-index' %}" class="nav-link active">Dashboard</a></li>
+            		{% else %}
+            			<li class="nav-item"><a href="{% url 'trends-index' %}" class="nav-link active">Trends</a></li>
+                		<li class="nav-item"><a href="{% url 'dashboard-index' %}" class="nav-link">Dashboard</a></li>
+            		{% endif %}
 				</ul>
 			</div>
 
