remove testing words from dashboard title

--- a/dashboard/templates/dashboard-index.html
+++ b/dashboard/templates/dashboard-index.html
@@ -35,7 +35,7 @@
 		{% if user.is_authenticated %}
 
 			<div class="container-fluid">
-				<h1> My Dashboard TESTING IF BASH SCRIPT WORKS </h1>
+				<h1> My Dashboard </h1>
 				<p></p>
 				<div style="margin-bottom:60px;">
 						Create your own customized data dashboard by selecting specific countries
