--- a/dashboard/templates/dashboard-index.html
+++ b/dashboard/templates/dashboard-index.html
@@ -140,7 +140,7 @@
 				Highcharts.chart('container', {
 					chart: {type: 'line'},
 					rangeSelector: { selected: 4},
-					title: {text: 'Cummulative Confirmed Cases', style: {fontSize:"24px"}},
+					title: {text: 'Cumulative Confirmed Cases', style: {fontSize:"24px"}},
 					subtitle: {text: 'Data from Johns Hopkins'},
 				  	xAxis: {categories: _dates},
 				  	yAxis: {
