--- a/trends/templates/trends-index.html
+++ b/trends/templates/trends-index.html
@@ -42,7 +42,7 @@
 			Highcharts.chart('container', {
 			  	chart: {type: 'area'},
 			  	rangeSelector: { selected: 4},
-			  	title: {text: 'Cummulative Confirmed Cases', style: {fontSize:"24px"}},
+			  	title: {text: 'Cumulative Confirmed Cases', style: {fontSize:"24px"}},
 			  	subtitle: {text: 'Global data from Johns Hopkins, US state-level data from the New York Times'},
 			  	xAxis: {categories: _dates},
 			  	yAxis: {
