test what regular multiplechoice field looks like

--- a/dashboard/templates/dashboard-index.html
+++ b/dashboard/templates/dashboard-index.html
@@ -6,7 +6,7 @@
 {% endblock %}
 
 {% block content %}
-	<style>
+<!-- 	<style>
 		form.modalform ul{
 			list-style-type:none;
 			display: flex;
@@ -19,7 +19,9 @@
 		form.modalform li{
 			width: 220px;
 		}
-		
+	</style> -->
+
+	<style>
 		.modal-dialog {
 	    	overflow-y: initial !important
 		}
