--- a/dashboard/templates/dashboard-index.html
+++ b/dashboard/templates/dashboard-index.html
@@ -7,29 +7,53 @@
 
 {% block content %}
 	<style>
-		form.modalform ul{
+		form.countrymodalform ul{
 			list-style-type:none;
 			display: flex;
 			flex-direction: column;
 			flex-wrap: wrap;
-			height: 400px;
+			height: 500px;
 			align-items: start;
 		}
 
-		form.modalform li{
+		form.countrymodalform li{
 			width: 220px;
+		}
+
+		form.statemodalform ul{
+			list-style-type:none;
+			display: flex;
+			flex-direction: row;
+			flex-wrap: nowrap;
+			width: 300px;
+		}
+
+		form.statemodalform ul ul{
+			list-style-type:none;
+			display: flex;
+			flex-direction: column;
+			flex-wrap: wrap;
+\		}
+
+		form.statemodalform ul ul li{
+			width: 270px;
 		}
 	</style>
 
 	<style>
 		.modal-dialog {
-	    	overflow-y: initial !important
+	    	overflow-y: initial !important;
+	    	overflow-x: initial !important;
 		}
 
 		.modal-body {
-
 		    overflow-y: auto;
 		    overflow-x: auto;
+		}
+
+		.modal-footer {
+			overflow-y: initial !important;
+			overflow-x: initial !important;
 		}
 	</style>
 
@@ -49,7 +73,7 @@
 		<!------------------------------------->
 		<!-- COUNTRY SELECTION MODAL STARTS -->
 		<div id = "country-selection-modal" class="modal fade" tabindex="-1" role="dialog" aria-labelledby="myLargeModalLabel" aria-hidden="true">
-			<form action = "" method = "POST" class = "modalform"> 
+			<form action = "" method = "POST" class = "countrymodalform"> 
 			  <div class="modal-dialog modal-xl">
 			    <div class="modal-content">
 			    	<div class="modal-header">
@@ -78,7 +102,7 @@
 		<!------------------------------------->
 		<!--- STATE SELECTION MODAL STARTS ---->
 		<div id = "state-selection-modal" class="modal fade" tabindex="-1" role="dialog" aria-labelledby="myLargeModalLabel" aria-hidden="true">
-			<form action = "" method = "POST"> 
+			<form action = "" method = "POST" class = "statemodalform"> 
 			  <div class="modal-dialog modal-xl">
 			    <div class="modal-content">
 			    	<div class="modal-header">
@@ -106,7 +130,7 @@
 		<!------------------------------------->
 		<!--------- LINE CHART STARTS --------->
 
-		<div id="container" style="min-width: 310px; max-width:80%; height: 500px; margin: 0 auto" class="border">
+		<div id="container1" style="min-width: 310px; max-width:80%; max-height: 80%; margin: 0 auto" class="border">
 			<script src="https://code.highcharts.com/highcharts.js"> </script>
 			<script src="https://code.highcharts.com/modules/exporting.js"> </script>
 			<script src="https://code.highcharts.com/modules/export-data.js"> </script>
@@ -114,64 +138,69 @@
 
 			<script>
 				_dates = {{ dates|safe }};
-				_r1 = {{ region_1|safe }};
-				_r2 = {{ region_2|safe }};
-				_r3 = {{ region_3|safe }};
-				_r4 = {{ region_4|safe }};
-				_r5 = {{ region_5|safe }};
-				_r6 = {{ region_6|safe }};
-				_r7 = {{ region_7|safe }};
-				_r8 = {{ region_8|safe }};
-				_r9 = {{ region_9|safe }};
-				_r10 = {{ region_10|safe }};
-				_r11 = {{ region_11|safe }};
-				_r12 = {{ region_12|safe }};
-				_r1name = {{region_1_name|safe}}
-				_r2name = {{region_2_name|safe}}
-				_r3name = {{region_3_name|safe}}
-				_r4name = {{region_4_name|safe}}
-				_r5name = {{region_5_name|safe}}
-				_r6name = {{region_6_name|safe}}
-				_r7name = {{region_7_name|safe}}
-				_r8name = {{region_8_name|safe}}
-				_r9name = {{region_9_name|safe}}
-				_r10name = {{region_10_name|safe}}
-				_r11name = {{region_11_name|safe}}
-				_r12name = {{region_12_name|safe}}		
+				_outputconfirmed = {{ output_data_list_confirmed|safe}}
+				_outputdeaths = {{ output_data_list_deaths|safe}}
+				_outputnames = {{ output_region_names|safe}}	
 				
-				Highcharts.chart('container', {
+				Highcharts.chart('container1', {
 					chart: {type: 'line'},
 					rangeSelector: { selected: 4},
 					title: {text: 'Cumulative Confirmed Cases', style: {fontSize:"24px"}},
 					subtitle: {text: 'Data from Johns Hopkins'},
 				  	xAxis: {categories: _dates},
-				  	yAxis: {
-				  		title: {text: '# Confirmed Cases'}
-				  	},
-				  	plotOptions: {
-				  		series: {marker: {radius: 1}}
-				  	},
+				  	yAxis: {title: {text: '# Confirmed Cases'}},
+				  	plotOptions: {series: {marker: {radius: 1}}},
 					series: [
-						{name: _r1name, data: _r1},
-						{name: _r2name, data: _r2},
-						{name: _r3name, data: _r3},
-						{name: _r4name, data: _r4},
-						{name: _r5name, data: _r5},
-						{name: _r6name, data: _r6},
-						{name: _r7name, data: _r7},
-						{name: _r8name, data: _r8},
-						{name: _r9name, data: _r9},
-						{name: _r10name, data: _r10},
-						{name: _r11name, data: _r11},
-						{name: _r12name, data: _r12},
+						{name: _outputnames[0], data: _outputconfirmed[0]},
+						{name: _outputnames[1], data: _outputconfirmed[1]},
+						{name: _outputnames[2], data: _outputconfirmed[2]},
+						{name: _outputnames[3], data: _outputconfirmed[3]},
+						{name: _outputnames[4], data: _outputconfirmed[4]},
+						{name: _outputnames[5], data: _outputconfirmed[5]},
+						{name: _outputnames[6], data: _outputconfirmed[6]},
+						{name: _outputnames[7], data: _outputconfirmed[7]},
+						{name: _outputnames[8], data: _outputconfirmed[8]},
+						{name: _outputnames[9], data: _outputconfirmed[9]},
+						{name: _outputnames[10], data: _outputconfirmed[10]},
+						{name: _outputnames[11], data: _outputconfirmed[11]},
 					]
 				})
 			</script>
-
+		</div>
 		<!---------- LINE CHART ENDS ---------->
 		<!------------------------------------->
+		<div style="min-height: 30px; max_height: 150px">
+		</div>
 
-	</div>
+		<div id="container2" style="min-width: 310px; max-width:80%; max-height: 80%; margin: 0 auto" class="border">
+			<script>
+				Highcharts.chart('container2', {
+					chart: {type: 'line'},
+					rangeSelector: { selected: 4},
+					title: {text: 'Cumulative Deaths', style: {fontSize:"24px"}},
+					subtitle: {text: 'Data from Johns Hopkins'},
+				  	xAxis: {categories: _dates},
+				  	yAxis: {title: {text: '# Confirmed Cases'}},
+				  	plotOptions: {series: {marker: {radius: 1}}},
+					series: [
+						{name: _outputnames[0], data: _outputdeaths[0]},
+						{name: _outputnames[1], data: _outputdeaths[1]},
+						{name: _outputnames[2], data: _outputdeaths[2]},
+						{name: _outputnames[3], data: _outputdeaths[3]},
+						{name: _outputnames[4], data: _outputdeaths[4]},
+						{name: _outputnames[5], data: _outputdeaths[5]},
+						{name: _outputnames[6], data: _outputdeaths[6]},
+						{name: _outputnames[7], data: _outputdeaths[7]},
+						{name: _outputnames[8], data: _outputdeaths[8]},
+						{name: _outputnames[9], data: _outputdeaths[9]},
+						{name: _outputnames[10], data: _outputdeaths[10]},
+						{name: _outputnames[11], data: _outputdeaths[11]},
+					]
+				})
+			</script>
+		</div>
+
+
 
 
 {% endblock %}
