added google and fb sign on; not tested

--- a/templates/base_generic.html
+++ b/templates/base_generic.html
@@ -48,10 +48,10 @@
 				{% else %}
 					<button class="btn btn-dark navbar-btn" style="margin: 2px"> Welcome, {{ user.get_username }}!</button>
 				{% endif %}
-				<a class="btn btn-secondary navbar-btn" href="{% url 'logout' %}">Log Out</a>
+				<a class="btn btn-secondary navbar-btn" href="{% url 'account_logout' %}">Log Out</a>
 			{% else %}
-				<a class="btn btn-dark navbar-btn" style="margin: 2px" href="{% url 'login'%}">Log In</a>
-				<a class="btn btn-secondary navbar-btn" style="margin: 2px" href="{% url 'signup' %}">Sign Up</a>
+				<a class="btn btn-dark navbar-btn" style="margin: 2px" href="{% url 'account_login'%}">Log In</a>
+				<a class="btn btn-secondary navbar-btn" style="margin: 2px" href="{% url 'account_signup' %}">Sign Up</a>
 			{% endif %}
 
 		</div>
