--- a/templates/registration/logged_out.html
+++ b/templates/registration/logged_out.html
@@ -2,5 +2,5 @@
 
 {% block content %}
 	<p>Logged out!</p>
-	<a href="{% url 'login'%}">Click here to login again.</a>
+	<a href="{% url 'account_login'%}">Click here to login again.</a>
 	{% endblock %}
