--- a/templates/base_generic.html
+++ b/templates/base_generic.html
@@ -4,6 +4,7 @@
 <link rel="stylesheet" href="{% static 'css/bootstrap.min.css' %}">
 <link rel="stylesheet" href="{% static 'css/bootstrap.css' %}">
 
+
 <head>
 	<!-- Required meta tags -->
     <meta charset="utf-8">
@@ -18,6 +19,29 @@
 </head>
 
 <body>
+	<!-- Facebook js script for log in -->
+	<script>
+	  window.fbAsyncInit = function() {
+	    FB.init({
+	      appId      : '{your-app-id}',
+	      cookie     : true,
+	      xfbml      : true,
+	      version    : '{api-version}'
+	    });
+	      
+	    FB.AppEvents.logPageView();   
+	      
+	  };
+
+	  (function(d, s, id){
+	     var js, fjs = d.getElementsByTagName(s)[0];
+	     if (d.getElementById(id)) {return;}
+	     js = d.createElement(s); js.id = id;
+	     js.src = "https://connect.facebook.net/en_US/sdk.js";
+	     fjs.parentNode.insertBefore(js, fjs);
+	   }(document, 'script', 'facebook-jssdk'));
+	</script>
+
 	<nav class="navbar navbar-expand-lg navbar-dark bg-dark fixed_top" role="navigation">
 		<div class="container-fluid">
 			<div class="navbar-header">
