--- a/templates/backup allauth templates/account/password_reset_done.html
+++ b/templates/backup allauth templates/account/password_reset_done.html
@@ -1,8 +1,9 @@
-{% extends "base_generic.html" %}
+{% extends "account/base.html" %}
 
 {% load i18n %}
 {% load account %}
 
+{% block head_title %}{% trans "Password Reset" %}{% endblock %}
 
 {% block content %}
     <h1>{% trans "Password Reset" %}</h1>
