--- a/templates/backup allauth templates/account/logout.html
+++ b/templates/backup allauth templates/account/logout.html
@@ -1,7 +1,8 @@
-{% extends 'base_generic.html' %}
+{% extends "account/base.html" %}
 
 {% load i18n %}
 
+{% block head_title %}{% trans "Sign Out" %}{% endblock %}
 
 {% block content %}
 <h1>{% trans "Sign Out" %}</h1>
