--- a/templates/base_generic.html
+++ b/templates/base_generic.html
@@ -75,16 +75,16 @@
 				<a class="btn btn-secondary navbar-btn" href="{% url 'account_logout' %}">Log Out</a>
 			{% else %}
 				<a class="btn btn-dark navbar-btn" style="margin: 2px" href="{% url 'account_login'%}">Log In</a>
-				<a class="btn btn-secondary navbar-btn" style="margin: 2px" href="{% url 'account_signup' %}">Sign Up</a>
+				<a class="btn btn-secondary navbar-btn" style="margin: 2px" href="{% url 'override_signup' %}">Sign Up</a>
 			{% endif %}
 
 		</div>
 	</nav>
 
-
-	{% block content %}
-
-	{% endblock %}
+	<div class="container-fluid", style="padding:40px">
+		{% block content %}
+		{% endblock %}
+	</div>
 
 	<!-- Optional JavaScript -->
     <!-- jQuery first, then Popper.js, then Bootstrap JS -->
