--- a/dashboard/templates/dashboard-index.html
+++ b/dashboard/templates/dashboard-index.html
@@ -57,87 +57,88 @@
 		}
 	</style>
 
-	<div class="container-fluid", style="padding: 5%">
+	<div class="container-fluid">
+		<h1> My Dashboard </h1>
+		<p></p>
+		<div style="margin-bottom:40px;">
+				Create your own customized data dashboard by selecting specific countries
+				<button type="button" class="btn btn-primary float-right" data-toggle="modal" data-target="#country-selection-modal" style="padding:10px;margin-left:50px; margin-top:-10px; vertical-align: middle">Update country selection</button>
 
-		<div class="container-fluid">
-			<h1> My Dashboard </h1>
-			<p></p>
-			<div style="margin-bottom:60px;">
-					Create your own customized data dashboard by selecting specific countries
-					<button type="button" class="btn btn-primary float-right" data-toggle="modal" data-target="#country-selection-modal" style="padding:10px;margin-left:50px; margin-top:-10px; vertical-align: middle">Update country selection</button>
-
-					<button type="button" class="btn btn-primary float-right" data-toggle="modal" data-target="#state-selection-modal" style="padding:10px;margin-left:50px; margin-top:-10px; vertical-align: middle">Update state selection</button>
-			</div>
+				<button type="button" class="btn btn-primary float-right" data-toggle="modal" data-target="#state-selection-modal" style="padding:10px;margin-left:50px; margin-top:-10px; vertical-align: middle">Update state selection</button>
 		</div>
+	</div>
 
+	<div class="container-fluid" style="padding-bottom:25px">
 		<form action='' method="POST" onChange="this.submit()";>
 			{% csrf_token %}
-			Date window:
+			Date period:
 			{{ dashboard_date_range_form.date_range }}
 		</form>
+	</div>
 
 
-		<!------------------------------------->
-		<!-- COUNTRY SELECTION MODAL STARTS -->
-		<div id = "country-selection-modal" class="modal fade" tabindex="-1" role="dialog" aria-labelledby="myLargeModalLabel" aria-hidden="true">
-			<form action = "" method = "POST" class = "countrymodalform"> 
-			  <div class="modal-dialog modal-xl">
-			    <div class="modal-content">
-			    	<div class="modal-header">
-			  			<h5 class="modal-title" id="exampleModalLabel">Country-level data to include on dashboard</h5>
-			  			<button type="button" class="close" data-dismiss="modal" aria-label="Close">
-			  				<span aria-hidden="true">&times;</span>
-			  			</button>
-			  		</div>
-		  			<div class="modal-body">		  				
-	  					{% csrf_token %}
-	  					{{ dashboard_country_filter_form.countries}}
-
-		  			</div>
-		  			<div class="modal-footer">
-		  				<button type="button" class="btn btn-secondary" data-dismiss="modal">Close</button>
-		  				<button type="submit" class="btn btn-primary"> Save changes </button>
-		  			</div>
+	<!------------------------------------->
+	<!-- COUNTRY SELECTION MODAL STARTS -->
+	<div id = "country-selection-modal" class="modal fade" tabindex="-1" role="dialog" aria-labelledby="myLargeModalLabel" aria-hidden="true">
+		<form action = "" method = "POST" class = "countrymodalform"> 
+		  <div class="modal-dialog modal-xl">
+		    <div class="modal-content">
+		    	<div class="modal-header">
+		  			<h5 class="modal-title" id="exampleModalLabel">Country-level data to include on dashboard</h5>
+		  			<button type="button" class="close" data-dismiss="modal" aria-label="Close">
+		  				<span aria-hidden="true">&times;</span>
+		  			</button>
 		  		</div>
-			  </div>
-			</form>
-		</div>
-		<!--- COUNTRY SELECTION BUTTON ENDS --->
-		<!------------------------------------->
+	  			<div class="modal-body">		  				
+  					{% csrf_token %}
+  					{{ dashboard_country_filter_form.countries}}
+
+	  			</div>
+	  			<div class="modal-footer">
+	  				<button type="button" class="btn btn-secondary" data-dismiss="modal">Close</button>
+	  				<button type="submit" class="btn btn-primary"> Save changes </button>
+	  			</div>
+	  		</div>
+		  </div>
+		</form>
+	</div>
+	<!--- COUNTRY SELECTION BUTTON ENDS --->
+	<!------------------------------------->
 
 
-		<!------------------------------------->
-		<!--- STATE SELECTION MODAL STARTS ---->
-		<div id = "state-selection-modal" class="modal fade" tabindex="-1" role="dialog" aria-labelledby="myLargeModalLabel" aria-hidden="true">
-			<form action = "" method = "POST" class = "statemodalform"> 
-			  <div class="modal-dialog modal-xl">
-			    <div class="modal-content">
-			    	<div class="modal-header">
-			  			<h5 class="modal-title" id="exampleModalLabel">State-level data to include on dashboard</h5>
-			  			<button type="button" class="close" data-dismiss="modal" aria-label="Close">
-			  				<span aria-hidden="true">&times;</span>
-			  			</button>
-			  		</div>
-		  			<div class="modal-body">	
-		  				{% csrf_token %}
-	  					{{ dashboard_state_filter_form.states}}	  				
-		  			</div>
-		  			<div class="modal-footer">
-		  				<button type="button" class="btn btn-secondary" data-dismiss="modal">Close</button>
-		  				<button type="submit" class="btn btn-primary"> Save changes </button>
-		  			</div>
+	<!------------------------------------->
+	<!--- STATE SELECTION MODAL STARTS ---->
+	<div id = "state-selection-modal" class="modal fade" tabindex="-1" role="dialog" aria-labelledby="myLargeModalLabel" aria-hidden="true">
+		<form action = "" method = "POST" class = "statemodalform"> 
+		  <div class="modal-dialog modal-xl">
+		    <div class="modal-content">
+		    	<div class="modal-header">
+		  			<h5 class="modal-title" id="exampleModalLabel">State-level data to include on dashboard</h5>
+		  			<button type="button" class="close" data-dismiss="modal" aria-label="Close">
+		  				<span aria-hidden="true">&times;</span>
+		  			</button>
 		  		</div>
-			  </div>
-			</form>
-		</div>
-		<!---- STATE SELECTION BUTTON ENDS ---->
-		<!------------------------------------->
+	  			<div class="modal-body">	
+	  				{% csrf_token %}
+  					{{ dashboard_state_filter_form.states}}	  				
+	  			</div>
+	  			<div class="modal-footer">
+	  				<button type="button" class="btn btn-secondary" data-dismiss="modal">Close</button>
+	  				<button type="submit" class="btn btn-primary"> Save changes </button>
+	  			</div>
+	  		</div>
+		  </div>
+		</form>
+	</div>
+	<!---- STATE SELECTION BUTTON ENDS ---->
+	<!------------------------------------->
 
 
-		<!------------------------------------->
-		<!--------- LINE CHART STARTS --------->
+	<!------------------------------------->
+	<!--------- LINE CHART STARTS --------->
 
-		<div id="container1" style="min-width: 310px; max-width:80%; max-height: 80%; margin: 0 auto" class="border">
+	<div style="float:left; width:70%; padding-left:12px; margin: 0 auto">
+		<div id="container1" style="min-width: 300px; max-height: 80%; margin: 0 auto" class="border">
 			<script src="https://code.highcharts.com/highcharts.js"> </script>
 			<script src="https://code.highcharts.com/modules/exporting.js"> </script>
 			<script src="https://code.highcharts.com/modules/export-data.js"> </script>
@@ -176,10 +177,10 @@
 		</div>
 		<!---------- LINE CHART ENDS ---------->
 		<!------------------------------------->
-		<div style="min-height: 30px; max_height: 150px">
-		</div>
+		<div style="min-height: 30px; max_height: 100px; min_width: 3000px"> </div>
 
-		<div id="container2" style="min-width: 310px; max-width:80%; max-height: 80%; margin: 0 auto" class="border">
+
+		<div id="container2" style="min-width: 300px; max-height: 80%; margin: 0 auto" class="border">
 			<script>
 				Highcharts.chart('container2', {
 					chart: {type: 'line'},
@@ -206,6 +207,49 @@
 				})
 			</script>
 		</div>
+	</div>
+
+	<div style="float:right; width:25%">
+		<div style="width:300px;height:200px;background-color:#FDF3DF">
+
+			<div style="width:300px;height:40px;background-color:#FEE1A8 ">
+				<p style="text-align: center; font-size:20px; line-height: 40px; font-weight:550"> Confirmed cases: </p>
+			</div>
+
+			<div style="width:300px;height: 25px;"></div>
+
+			<div style="width:300px;height:60px;">
+				<h1 style="text-align: center; line-height:60px;"> 123456 </h1>
+			</div>
+
+			<div style="width:300px;height:50px;">
+				<p style="text-align: center;" > New today: +1000 </p> 
+			</div>
+
+		</div>
+
+		<div style="height:25px"></div>
+
+		<div style="width:300px;height:200px;background-color:#FFD6D6">
+
+			<div style="width:300px;height:40px;background-color:#FF0000">
+				<p style="text-align:center;font-size:20px;line-height:40px;font-weight:550"> Deaths: </p>
+			</div>
+
+			<div style="width:300px;height: 25px;"></div>
+
+			<div style="width:300px;height:60px;">
+				<h1 style="text-align: center; line-height:60px;"> 123456 </h1>
+			</div>
+
+			<div style="width:300px;height:50px;">
+				<p style="text-align: center;" > New today: +1000 </p> 
+			</div>
+
+		</div>
+
+	</div>
+
 
 
 
