--- a/dashboard/templates/dashboard-index.html
+++ b/dashboard/templates/dashboard-index.html
@@ -57,8 +57,10 @@
 		}
 	</style>
 
+	<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
+
 	<div class="container-fluid">
-		<h1> My Dashboard </h1>
+		<h2> My Dashboard </h2>
 		<p></p>
 		<div style="margin-bottom:40px;">
 				Create your own customized data dashboard by selecting specific countries
@@ -209,20 +211,27 @@
 		</div>
 	</div>
 
-	<div style="float:right; width:25%">
-		<div style="width:300px;height:200px;background-color:#FDF3DF">
 
-			<div style="width:300px;height:40px;background-color:#FEE1A8 ">
-				<p style="text-align: center; font-size:20px; line-height: 40px; font-weight:550"> Confirmed cases: </p>
+	<div style="float:right; width:25%">
+
+
+		<div style="float:right;">
+			<button style="margin-right:60px; margin-bottom: 10px"> Filter <i class="fa fa-filter"></i> </button>
+		</div>
+		<div style="clear:both;width:85%;height:200px;background-color:#FDF3DF">
+
+			<div style="height:40px;background-color:#FEE1A8 ">
+				<p style="text-align: center; font-size:20px; line-height: 40px; font-weight:550"> Gobal confirmed cases: </p>
+
 			</div>
 
-			<div style="width:300px;height: 25px;"></div>
+			<div style="height: 25px;"></div>
 
-			<div style="width:300px;height:60px;">
+			<div style="height:60px;">
 				<h1 style="text-align: center; line-height:60px;"> 123456 </h1>
 			</div>
 
-			<div style="width:300px;height:50px;">
+			<div style="height:50px;">
 				<p style="text-align: center;" > New today: +1000 </p> 
 			</div>
 
@@ -230,19 +239,19 @@
 
 		<div style="height:25px"></div>
 
-		<div style="width:300px;height:200px;background-color:#FFD6D6">
+		<div style="width:85%;height:200px;background-color:#FFD6D6">
 
-			<div style="width:300px;height:40px;background-color:#FF0000">
-				<p style="text-align:center;font-size:20px;line-height:40px;font-weight:550"> Deaths: </p>
+			<div style="width:100%;height:40px;background-color:#FF0000">
+				<p style="text-align:center;font-size:20px;line-height:40px;font-weight:550"> Global Deaths: </p>
 			</div>
 
-			<div style="width:300px;height: 25px;"></div>
+			<div style="width:100%;height: 25px;"></div>
 
-			<div style="width:300px;height:60px;">
+			<div style="width:100%;height:60px;">
 				<h1 style="text-align: center; line-height:60px;"> 123456 </h1>
 			</div>
 
-			<div style="width:300px;height:50px;">
+			<div style="width:100%;height:50px;">
 				<p style="text-align: center;" > New today: +1000 </p> 
 			</div>
 
