--- a/templates/base_generic.html
+++ b/templates/base_generic.html
@@ -3,7 +3,7 @@
 {% load static %}
 <link rel="stylesheet" href="{% static 'css/bootstrap.min.css' %}">
 <link rel="stylesheet" href="{% static 'css/bootstrap.css' %}">
-
+<link rel="stylesheet" href="d3formatting.css">
 
 <head>
 	<!-- Required meta tags -->
