--- a/dashboard/templates/dashboard-index.html
+++ b/dashboard/templates/dashboard-index.html
@@ -62,12 +62,7 @@
 	<div class="container-fluid">
 		<h2> My Dashboard </h2>
 		<p></p>
-		<div style="margin-bottom:40px;">
-				Create your own customized data dashboard by selecting specific countries
-				<button type="button" class="btn btn-dark float-right" data-toggle="modal" data-target="#country-selection-modal" style="padding:10px;margin-left:50px; margin-top:-10px; vertical-align: middle">Update country selection</button>
 
-				<button type="button" class="btn btn-dark float-right" data-toggle="modal" data-target="#state-selection-modal" style="padding:10px;margin-left:50px; margin-top:-10px; vertical-align: middle">Update state selection</button>
-		</div>
 	</div>
 
 	<div class="container-fluid" style="padding-bottom:25px">
@@ -79,9 +74,13 @@
 	</div>
 
 
+
+
+
+
 	<!------------------------------------->
 	<!-- COUNTRY SELECTION MODAL STARTS -->
-	<div id = "country-selection-modal" class="modal fade" tabindex="-1" role="dialog" aria-labelledby="myLargeModalLabel" aria-hidden="true">
+<!-- 	<div id = "country-selection-modal" class="modal fade" tabindex="-1" role="dialog" aria-labelledby="myLargeModalLabel" aria-hidden="true">
 		<form action = "" method = "POST" class = "countrymodalform"> 
 		  <div class="modal-dialog modal-xl">
 		    <div class="modal-content">
@@ -103,14 +102,14 @@
 	  		</div>
 		  </div>
 		</form>
-	</div>
+	</div> -->
 	<!--- COUNTRY SELECTION BUTTON ENDS --->
 	<!------------------------------------->
 
 
 	<!------------------------------------->
 	<!--- STATE SELECTION MODAL STARTS ---->
-	<div id = "state-selection-modal" class="modal fade" tabindex="-1" role="dialog" aria-labelledby="myLargeModalLabel" aria-hidden="true">
+<!-- 	<div id = "state-selection-modal" class="modal fade" tabindex="-1" role="dialog" aria-labelledby="myLargeModalLabel" aria-hidden="true">
 		<form action = "" method = "POST" class = "statemodalform"> 
 		  <div class="modal-dialog modal-xl">
 		    <div class="modal-content">
@@ -131,15 +130,86 @@
 	  		</div>
 		  </div>
 		</form>
-	</div>
+	</div> -->
 	<!---- STATE SELECTION BUTTON ENDS ---->
 	<!------------------------------------->
+
+	<!-------------------------------------->
+	<!----- UPDATE REGION DATA  STARTS ----->
 
 
 	<!------------------------------------->
 	<!--------- LINE CHART STARTS --------->
 
 	<div style="float:left; width:70%; padding-left:12px; margin: 0 auto">
+		<button type="button" class="btn btn-dark float-right" data-toggle="modal" data-target="#region-filter-modal" style="padding:10px;">Update regional preferences</button>
+
+		<div id = "region-filter-modal" class="modal fade" tabindex="-1" role="dialog" aria-labelledby="myLargeModalLabel" aria-hidden="true" style="margin-top:20%">
+			<div class="modal-dialog">
+				<div class="modal-content">
+					<div class="modal-body" style="align-self: center">
+						<button type="button" class="close" data-dismiss="modal" aria-label="Close">
+				  				<span aria-hidden="true">&times;</span>
+				  		</button>
+						<button type="button" class="btn btn-dark" data-toggle="modal" data-target="#country-selection-modal" style="padding:10px;width:210px;margin:5px">Update country selection</button>
+
+						<button type="button" class="btn btn-dark" data-toggle="modal" data-target="#state-selection-modal" style="padding:10px;width:210px;margin:5px">Update state selection</button>
+					</div>
+				</div>
+			</div>
+
+			<div id = "country-selection-modal" class="modal fade" tabindex="-1" role="dialog" aria-labelledby="myLargeModalLabel" aria-hidden="true">
+				<form action = "" method = "POST" class = "countrymodalform"> 
+				  <div class="modal-dialog modal-xl">
+				    <div class="modal-content">
+				    	<div class="modal-header">
+				  			<h5 class="modal-title" id="exampleModalLabel">Country-level data to include on dashboard</h5>
+				  			<button type="button" class="close" data-dismiss="modal" aria-label="Close">
+				  				<span aria-hidden="true">&times;</span>
+				  			</button>
+				  		</div>
+			  			<div class="modal-body">		  				
+		  					{% csrf_token %}
+		  					{{ dashboard_country_filter_form.countries}}
+
+			  			</div>
+			  			<div class="modal-footer">
+			  				<button type="button" class="btn btn-secondary" data-dismiss="modal">Close</button>
+			  				<button type="submit" class="btn btn-primary"> Save changes </button>
+			  			</div>
+			  		</div>
+				  </div>
+				</form>
+			</div>
+
+			<div id = "state-selection-modal" class="modal fade" tabindex="-1" role="dialog" aria-labelledby="myLargeModalLabel" aria-hidden="true">
+				<form action = "" method = "POST" class = "statemodalform"> 
+				  <div class="modal-dialog modal-xl">
+				    <div class="modal-content">
+				    	<div class="modal-header">
+				  			<h5 class="modal-title" id="exampleModalLabel">State-level data to include on dashboard</h5>
+				  			<button type="button" class="close" data-dismiss="modal" aria-label="Close">
+				  				<span aria-hidden="true">&times;</span>
+				  			</button>
+				  		</div>
+			  			<div class="modal-body">	
+			  				{% csrf_token %}
+		  					{{ dashboard_state_filter_form.states}}	  				
+			  			</div>
+			  			<div class="modal-footer">
+			  				<button type="button" class="btn btn-secondary" data-dismiss="modal">Close</button>
+			  				<button type="submit" class="btn btn-primary"> Save changes </button>
+			  			</div>
+			  		</div>
+				  </div>
+				</form>
+			</div> 
+
+		</div>
+		
+
+		<div style="clear:both; height:10px"></div>
+
 		<div id="container1" style="min-width: 300px; max-height: 80%; margin: 0 auto" class="border">
 			<script src="https://code.highcharts.com/highcharts.js"> </script>
 			<script src="https://code.highcharts.com/modules/exporting.js"> </script>
@@ -232,7 +302,7 @@
 			</div>
 
 			<div style="height:50px;">
-				<p style="text-align: center;" > New today: +{{ increment_confirmed }}   <span style="font-style:italic;color:grey;padding-left:7px">+{{ incr_pct_confirmed }}% </span></p> 
+				<p style="text-align: center;" > New today: +{{ increment_confirmed }}   <span style="font-style:italic;color:grey;padding-left:5px">+{{ incr_pct_confirmed }}% </span></p> 
 			</div>
 
 		</div>
@@ -252,7 +322,7 @@
 			</div>
 
 			<div style="width:100%;height:50px;">
-				<p style="text-align: center;" > New today: +{{ increment_deaths }}    <span style="font-style:italic;color:grey;padding-left:7px">+{{ incr_pct_deaths }}% </span></p> 
+				<p style="text-align: center;" > New today: +{{ increment_deaths }}    <span style="font-style:italic;color:grey;padding-left:5px">+{{ incr_pct_deaths }}% </span></p> 
 			</div>
 
 		</div>
