updated signup sheet with fb and google

--- a/dashboard/templates/dashboard-index.html
+++ b/dashboard/templates/dashboard-index.html
@@ -142,7 +142,7 @@
 	<!--------- LINE CHART STARTS --------->
 
 	<div style="float:left; width:70%; padding-left:12px; margin: 0 auto">
-		<button type="button" class="btn btn-dark float-right" data-toggle="modal" data-target="#region-filter-modal" style="padding:10px;">Update regional preferences</button>
+		<button type="button" class="btn btn-dark float-right" data-toggle="modal" data-target="#region-filter-modal" style="padding:10px;">Click to modify chart data</button>
 
 		<div id = "region-filter-modal" class="modal fade" tabindex="-1" role="dialog" aria-labelledby="myLargeModalLabel" aria-hidden="true" style="margin-top:20%">
 			<div class="modal-dialog">
