--- a/templates/base_generic.html
+++ b/templates/base_generic.html
@@ -74,9 +74,9 @@
 				{% endif %}
 				<a class="btn btn-secondary navbar-btn" href="{% url 'account_logout' %}">Log Out</a>
 			{% else %}
-				<a class="btn btn-dark navbar-btn" style="margin: 2px" href="{% url 'account_login'%}">Log In</a>
-				<a class="btn btn-secondary navbar-btn" style="margin: 2px" href="{% url 'override_signup' %}">Sign Up</a>
-			{% endif %}
+				<a class="btn btn-secondary navbar-btn" style="margin: 2px" href="{% url 'account_login'%}">Log In</a>
+<!-- 				<a class="btn btn-secondary navbar-btn" style="margin: 2px" href="{% url 'override_signup' %}">Sign Up</a>
+ -->			{% endif %}
 
 		</div>
 	</nav>
